--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-<link rel="modulepreload" href="/assets/index.105537d3.js">
-<link rel="stylesheet" href="assets/index.fed05d23.css">    <script type="module" crossorigin src="assets/index.59153ca5.js"></script>
-    <link rel="stylesheet" href="assets/index.f3c94b85.css">
+<link rel="modulepreload" href="/assets/index.bfa0fc97.js">
+<link rel="stylesheet" href="assets/index.fed05d23.css">    <script type="module" crossorigin src="assets/index.0a2913bc.js"></script>
+    <link rel="stylesheet" href="assets/index.885dd653.css">
   </head>
   <body>
-    <div id="app"><p aria-live="assertive" id="__snowstorm-route-announcer__" role="alert" style="border:0;clip:rect(0 0 0 0);height:1px;margin:-1px;overflow:hidden;padding:0;position:absolute;width:1px;white-space:nowrap;word-wrap:normal"></p><div class="_layout_baeq2_1"><div></div><div class="_content_baeq2_10"><div class="_landingpage_hnmwx_1"><div class="_hero_hnmwx_26"><h1>JustMeet</h1><h2>Meet new friends<!-- --> <!-- --><div class="text-transition " style="width:0;white-space:nowrap;display:inline-block;position:relative"><span style="visibility:hidden" class="text-transition_placeholder"></span><div class="text-transition_inner" style="overflow:visible;display:block;position:absolute;top:0;left:0;height:100%;width:100%"><div style="opacity:1;transform:translateY(0%);position:absolute">bouldering</div></div></div></h2><div class="_actions_hnmwx_62"><button type="button">Authenticate with Discord</button><button type="button" href="/faq">FAQ</button></div></div></div></div><div class="_footer_baeq2_16"><a href="https://henrygressmann.de/impressum" target="_blank" referrerPolicy="no-referrer" rel="noreferrer">legal notice/privacy policy</a></div></div></div>
+    <div id="app"><p aria-live="assertive" id="__snowstorm-route-announcer__" role="alert" style="border:0;clip:rect(0 0 0 0);height:1px;margin:-1px;overflow:hidden;padding:0;position:absolute;width:1px;white-space:nowrap;word-wrap:normal"></p><div class="_layout_7nxhk_1"><div></div><div class="_content_7nxhk_10"><div class="_landingpage_hnmwx_1"><div class="_hero_hnmwx_26"><h1>Real Itätsverlust</h1><img src="assets/lust_large.png/index.html" alt="LUST"></div></div></div><div class="_footer_7nxhk_17"></div></div></div>
     <script id="__serverprops" type="application/json">{}</script>    <!--SNOWSTORM ENTRYPOINT--><!--/SNOWSTORM ENTRYPOINT-->
   </body>
 </html>
